--- a/index.html
+++ b/index.html
@@ -2,9 +2,69 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Three JS - basics</title>
+    <style>
+    body {
+        margin: 0;
+        overflow: hidden;
+    }
+    canvas {
+        background: red;
+    }
+    </style>
 </head>
 <body>
+    <canvas id="myCanvas"></canvas>
+    <script src="http://threejs.org/build/three.min.js"></script>
+    <script src="http://threejs.org/examples/js/libs/tween.min.js"></script>
+    <script src="http://threejs.org/examples/js/libs/stats.min.js"></script>
+    <script>
+        var renderer,
+            scene,
+            camera,
+            myCanvas = document.getElementById('myCanvas');
+
+        //RENDERER
+        renderer = new THREE.WebGLRenderer({canvas: myCanvas, antialias: true});
+        renderer.setClearColor(0x00ff00);
+        renderer.setPixelRatio(window.devicePixelRatio);
+        renderer.setSize(window.innerWidth,window.innerHeight);
+
+        //CAMERA
+        camera = new THREE.PerspectiveCamera(35, window.innerWidth/window.innerHeight, 0.1, 3000);
+
+        //SCENE
+        scene = new THREE.Scene();
+
+        //LIGHTS
+        var light = new THREE.AmbientLight(0xffffff,0.5);
+        scene.add(light);
+        var light1 = new THREE.PointLight(0xffffff,0.5);
+        scene.add(light1);
+
+        //MATERIAL
+        var material = new THREE.MeshLambertMaterial({
+            color: 0xF3FFE2,
+            map: new THREE.TextureLoader().load('wool.jpg')
+        });
+
+        //GEOMETRY
+        var geometry = new THREE.BoxGeometry(100,100,100);
+        var mesh = new THREE.Mesh(geometry,material);
+        mesh.position.set(0,0,-1000);
+
+        scene.add(mesh);
+
+        requestAnimationFrame(render);
+
+        function render () {
+            mesh.rotation.x +=0.005;
+            mesh.rotation.y +=0.005;
+            renderer.render(scene, camera);
+            requestAnimationFrame(render);
+        }
+    </script>
+
 
 </body>
 </html>
