--- a/index.html
+++ b/index.html
@@ -19,22 +19,33 @@
     <script src="http://threejs.org/examples/js/libs/tween.min.js"></script>
     <script src="http://threejs.org/examples/js/libs/stats.min.js"></script>
     <script>
-        var renderer,
-            scene,
-            camera,
-            myCanvas = document.getElementById('myCanvas');
-
-        //RENDERER
-        renderer = new THREE.WebGLRenderer({canvas: myCanvas, antialias: true});
-        renderer.setClearColor(0x00ff00);
-        renderer.setPixelRatio(window.devicePixelRatio);
-        renderer.setSize(window.innerWidth,window.innerHeight);
-
-        //CAMERA
-        camera = new THREE.PerspectiveCamera(35, window.innerWidth/window.innerHeight, 0.1, 3000);
+        var myCanvas = document.getElementById('myCanvas');
+        var width = window.innerWidth;
+        var height = window.innerHeight;
 
         //SCENE
-        scene = new THREE.Scene();
+        var scene = new THREE.Scene();
+
+        //CAMERA
+        var camera = new THREE.PerspectiveCamera(35, width/height, 0.1, 3000);
+
+        //RENDERER
+        var renderer = new THREE.WebGLRenderer({canvas: myCanvas, antialias: true});
+        renderer.setClearColor(0x00ff00);
+        renderer.setPixelRatio(window.devicePixelRatio);
+        renderer.setSize(width, height);
+
+        window.addEventListener('resize',function()
+        {
+            width = window.innerWidth;
+            height = window.innerHeight;
+            renderer.setSize(width,height);
+            camera.aspect = width/height;
+            camera.updateProjectionMatrix();
+        }
+        );
+
+
 
         //LIGHTS
         var light = new THREE.AmbientLight(0xffffff,0.5);
@@ -45,24 +56,39 @@
         //MATERIAL
         var material = new THREE.MeshLambertMaterial({
             color: 0xF3FFE2,
+            wireframe: false, //mozna zobaczyc same krawedzie
             map: new THREE.TextureLoader().load('wool.jpg')
         });
 
         //GEOMETRY
         var geometry = new THREE.BoxGeometry(100,100,100);
-        var mesh = new THREE.Mesh(geometry,material);
-        mesh.position.set(0,0,-1000);
+        var cube = new THREE.Mesh(geometry,material);
+        cube.position.set(0,0,-1000);
+        camera.position.z=300;
+        scene.add(cube);
 
-        scene.add(mesh);
+        var update = function ()
+        {
+            cube.rotation.x +=0.005;
+            cube.rotation.y +=0.005;
+            cube.rotation.z +=0.005;
+        };
 
-        requestAnimationFrame(render);
-
-        function render () {
-            mesh.rotation.x +=0.005;
-            mesh.rotation.y +=0.005;
+        var render = function ()
+        {
             renderer.render(scene, camera);
-            requestAnimationFrame(render);
-        }
+        };
+
+
+        var GameLoop = function () {
+            requestAnimationFrame( GameLoop);
+            update();
+            render();
+        };
+
+
+        GameLoop();
+
     </script>
 
 
