--- a/index.html
+++ b/index.html
@@ -2,39 +2,44 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Three JS - basics</title>
+    <title>Three JS - Rotating Cube</title>
     <style>
     body {
         margin: 0;
         overflow: hidden;
     }
-    canvas {
-        background: red;
-    }
     </style>
 </head>
 <body>
-    <canvas id="myCanvas"></canvas>
     <script src="http://threejs.org/build/three.min.js"></script>
-    <script src="http://threejs.org/examples/js/libs/tween.min.js"></script>
+    <script src="http://threejs.org/examples/js/controls/OrbitControls.js"></script>
     <script src="http://threejs.org/examples/js/libs/stats.min.js"></script>
+    <script src="http://threejs.org/examples/js/libs/dat.gui.min.js"></script>
     <script>
-        var myCanvas = document.getElementById('myCanvas');
         var width = window.innerWidth;
         var height = window.innerHeight;
+        var control;
+        var rotationSpeed = 1;
 
         //SCENE
         var scene = new THREE.Scene();
 
         //CAMERA
-        var camera = new THREE.PerspectiveCamera(35, width/height, 0.1, 3000);
+        var camera = new THREE.PerspectiveCamera(60, width/height, 1, 1000);
+        camera.position.x = 0;
+        camera.position.y = 40;
+        camera.position.z = 40;
+        camera.lookAt(scene.position);
 
         //RENDERER
-        var renderer = new THREE.WebGLRenderer({canvas: myCanvas, antialias: true});
-        renderer.setClearColor(0x00ff00);
+        var renderer = new THREE.WebGLRenderer();
+        renderer.setClearColor(0x000000);
         renderer.setPixelRatio(window.devicePixelRatio);
         renderer.setSize(width, height);
+        renderer.shadowMapEnabled = true;
+        document.body.appendChild( renderer.domElement );
 
+        //ON WINDOW RESIZE
         window.addEventListener('resize',function()
         {
             width = window.innerWidth;
@@ -45,33 +50,91 @@
         }
         );
 
-
-
         //LIGHTS
+        // add spotlight for the shadows
+        var spotLight = new THREE.SpotLight(0xffffff);
+        spotLight.position.set(10, 20, 20);
+        spotLight.shadowCameraNear = 10;
+        spotLight.shadowCameraFar = 50;
+        spotLight.castShadow = true;
+        spotLight.name = 'spot';
+        scene.add(spotLight);
+
+        //add ambient light
         var light = new THREE.AmbientLight(0xffffff,0.5);
+        light.name = 'ambient';
         scene.add(light);
-        var light1 = new THREE.PointLight(0xffffff,0.5);
-        scene.add(light1);
 
-        //MATERIAL
-        var material = new THREE.MeshLambertMaterial({
-            color: 0xF3FFE2,
-            wireframe: false, //mozna zobaczyc same krawedzie
-            map: new THREE.TextureLoader().load('wool.jpg')
+        //CUBE
+        var cubeMaterial = new THREE.MeshPhongMaterial({
+            color: 0xFFFFFF,
+            //wireframe: false, //mozna zobaczyc same krawedzie
+            map: new THREE.TextureLoader().load('starburst.jpg'),
+            roughness: 0.5,
+            metalness: 0.5,
+            shading: THREE.SmoothShading
         });
-
-        //GEOMETRY
-        var geometry = new THREE.BoxGeometry(100,100,100);
-        var cube = new THREE.Mesh(geometry,material);
-        cube.position.set(0,0,-1000);
-        camera.position.z=300;
+        var cubeGeometry = new THREE.BoxGeometry(10,10,10);
+        var cube = new THREE.Mesh(cubeGeometry,cubeMaterial);
+        cube.position.set(0,10,0);
+        cube.castShadow = true;
         scene.add(cube);
+
+
+
+        //GROUND PLANE
+        var planeGeometry = new THREE.PlaneGeometry(60, 50);
+        var planeMaterial = new THREE.MeshPhongMaterial({
+            color: 0xFFC010,
+            map: new THREE.TextureLoader().load('wood2.jpg', function ( texture ) {
+                texture.wrapS = texture.wrapT = THREE.RepeatWrapping;
+                texture.offset.set( 0, 0 );
+                texture.repeat.set( 2, 1 );
+            }),
+            roughness: 0.5,
+            shading: THREE.SmoothShading
+        } );
+        var plane = new THREE.Mesh(planeGeometry, planeMaterial);
+        plane.receiveShadow = true;
+        plane.position.set(0,-2,0);
+        plane.rotation.x = -0.5 * Math.PI;
+        scene.add(plane);
+
+        //CONTROLS
+        var controls = new THREE.OrbitControls( camera, renderer.domElement );
+        controls.enableDamping = true;
+        controls.dampingFactor = 0.8;
+        controls.enableZoom = true;
+
+        //STATS
+        var stats = new Stats();
+        stats.showPanel(0);
+        document.body.appendChild( stats.dom );
+
+
+        //CONTROL PANEL
+        // setup the control object for the control gui
+        control = new function () {
+            this.rotationSpeed = 1 ;
+            this.spotLightColor = spotLight.color.getHex();
+            this.ambientLightColor = light.color.getHex();
+        };
+
+        function addControlGui(controlObject) {
+            var gui = new dat.GUI();
+            gui.add(controlObject, 'rotationSpeed', 0, 10);
+            gui.addColor(controlObject, 'spotLightColor');
+            gui.addColor(controlObject, 'ambientLightColor');
+        }
+
+        addControlGui(control);
+
 
         var update = function ()
         {
-            cube.rotation.x +=0.005;
-            cube.rotation.y +=0.005;
-            cube.rotation.z +=0.005;
+            //cube.rotation.x +=0.005;
+            cube.rotation.y +=0.005*rotationSpeed;
+            //cube.rotation.z +=0.005;
         };
 
         var render = function ()
@@ -81,9 +144,18 @@
 
 
         var GameLoop = function () {
+            stats.begin();
             requestAnimationFrame( GameLoop);
+            controls.update(); // required if controls.enableDamping = true, or if controls.autoRotate = true
+
+            // update data from controlds
+            scene.getObjectByName('ambient').color = new THREE.Color(control.ambientLightColor);
+            scene.getObjectByName('spot').color = new THREE.Color(control.spotLightColor);
+            rotationSpeed = control.rotationSpeed;
+
             update();
             render();
+            stats.end();
         };
 
 
