Update index.html - changed js libraries adresses to https

--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
 </head>
 <body>
 <input id="img-path" type="file" />
-    <script src="http://threejs.org/build/three.min.js"></script>
-    <script src="http://threejs.org/examples/js/controls/OrbitControls.js"></script>
-    <script src="http://threejs.org/examples/js/libs/stats.min.js"></script>
-    <script src="http://threejs.org/examples/js/libs/dat.gui.min.js"></script>
+    <script src="https://threejs.org/build/three.min.js"></script>
+    <script src="https://threejs.org/examples/js/controls/OrbitControls.js"></script>
+    <script src="https://threejs.org/examples/js/libs/stats.min.js"></script>
+    <script src="https://threejs.org/examples/js/libs/dat.gui.min.js"></script>
     <script>
         var width = window.innerWidth;
         var height = window.innerHeight;
